--- a/_includes/my-comments.html
+++ b/_includes/my-comments.html
@@ -1,12 +1,12 @@
 {% assign disqus = site.disqus | default:site.disqus_shortname %}
-{% if disqus.enable and disqus.appkey and disqus.appid %}
-<div id="disqus_thread"></div>
+
+{% if site.valine.enable and site.valine.appkey and site.valine.appid %}
+<div id="comments"></div>
 <script>
-  var appkey = '{{ disqus.appkey }}',
-    appid = '{{ disqus.appid }}'；
+  var appkey = '{{ site.valine.appkey }}',
+    appid = '{{ site.valine.appid }}'；
   (function(d, s) {
     var j, e = d.getElementsByTagName(s)[0];
-    if (typeof LivereTower === 'function') { return; }
     j = d.createElement(s);
     j.src = 'https://cdn1.lncld.net/static/js/3.0.4/av-min.js';
     j.async = true;
@@ -15,7 +15,6 @@
 
   (function(d, s) {
     var j, e = d.getElementsByTagName(s)[0];
-    if (typeof LivereTower === 'function') { return; }
     j = d.createElement(s);
     j.src = 'https://unpkg.com/valine/dist/Valine.min.js';
     j.async = true;
@@ -23,11 +22,37 @@
   })(document, 'script');
 
   new Valine({
-    av: AV, 
-    el: '#disqus_thread', // 
+    av: AV,
+    el: '#comments', // 
     app_id: appid, // 这里填写上面得到的APP ID
     app_key: appkey, // 这里填写上面得到的APP KEY
+    verify:false, 
+    avatar:'mm', 
     placeholder: 'ヾﾉ≧∀≦)o来啊，快活啊!'
   });
+</script>
+{% elseif disqus %}
+<div id="disqus_thread"></div>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+<script>
+!function(w, d) {
+  if (d.getElementById("disqus_thread")) {
+    if (w.DISQUS) {
+      w.DISQUS.reset({
+        reload: true,
+        config() {
+          this.page.url = w.location.href;
+          this.page.title = d.title;
+        },
+      });
+    } else {
+      w.disqus_config = function disqusConfig() {
+        this.page.url = w.location.href;
+        this.page.title = d.title;
+      };
+      w.loadJSDeferred(d.getElementById("_hrefDisqus").href + '/embed.js');
+    }
+  }
+}(window, document);
 </script>
 {% endif %}
