--- a/_includes/head/links.html
+++ b/_includes/head/links.html
@@ -28,6 +28,12 @@
 <link rel="dns-prefetch" href="{{ '/assets/img/swipe.svg'                                                   | relative_url }}" id="_hrefSwipeSVG">
 
 {% assign disqus = site.disqus | default:site.disqus_shortname %}
+{% assign valine = site.valine %}
 {% if disqus %}
 <link rel="dns-prefetch" href="https://{{ disqus }}.disqus.com" id="_hrefDisqus">
+{% endif %}
+
+{% if valine.enable %}
+<link rel="dns-prefetch" href="https://cdn1.lncld.net" id="_hrefav">
+<link rel="dns-prefetch" href="https://unpkg.com" id="_hrefvaline">
 {% endif %}
