--- a/_includes/my-comments.html
+++ b/_includes/my-comments.html
@@ -12,8 +12,6 @@
         this.page.url = w.location.href;
         this.page.title = d.title;
       };
-      var src1 = 'https://cdn1.lncld.net/static/js/3.0.4/av-min.js',
-        src2 = 'https://unpkg.com/valine/dist/Valine.min.js';
       w.loadJSDeferred(d.getElementById("_hrefav").href + '/static/js/3.0.4/av-min.js');
       w.loadJSDeferred(d.getElementById("_hrefvaline").href + '/valine/dist/Valine.min.js');
     }
@@ -21,11 +19,11 @@
 
   new Valine({
     av: AV,
-    el: '#disqus_thread', // 
-    app_id: appid, // 这里填写上面得到的APP ID
-    app_key: appkey, // 这里填写上面得到的APP KEY
-    verify: false, 
-    avatar: 'mm', 
+    el: '#disqus_thread',
+    app_id: appid,
+    app_key: appkey,
+    verify: false,
+    avatar: 'mm',
     placeholder: 'ヾﾉ≧∀≦)o来啊，快活啊!'
   });
 </script>
