add comments system

--- a/_includes/my-comments.html
+++ b/_includes/my-comments.html
@@ -4,7 +4,7 @@
 <div id="disqus_thread"></div>
 <script>
   var appkey = '{{ site.valine.appkey }}',
-    appid = '{{ site.valine.appid }}'；
+    appid = '{{ site.valine.appid }}';
 
   !function(w, d){
     if(d.getElementById("disqus_thread")){
