add comments system

--- a/_includes/my-comments.html
+++ b/_includes/my-comments.html
@@ -13,7 +13,7 @@
         this.page.title = d.title;
       };
       w.loadJSDeferred(d.getElementById("_hrefav").href + '/static/js/3.0.4/av-min.js');
-      w.loadJSDeferred(d.getElementById("_hrefvaline").href + '/valine/dist/Valine.min.js');
+      w.loadJSDeferred(d.getElementById("_hrefvaline").href + 'valine/dist/Valine.min.js');
     }
   }(window, document);
 
