add comments system

--- a/_includes/my-comments.html
+++ b/_includes/my-comments.html
@@ -16,7 +16,8 @@
       w.loadJSDeferred(d.getElementById("_hrefvaline").href + 'valine/dist/Valine.min.js');
     }
   }(window, document);
-
+</script>
+<script>
   new Valine({
     av: AV,
     el: '#disqus_thread',
