add comments system

--- a/_includes/my-comments.html
+++ b/_includes/my-comments.html
@@ -27,8 +27,8 @@
   new Valine({
     av: AV,
     el: '#disqus_thread',
-    app_id: appid,
-    app_key: appkey,
+    appID: appid,
+    appKey: appkey,
     verify: false,
     avatar: 'mm',
     placeholder: 'ヾﾉ≧∀≦)o来啊，快活啊!'
