add comments system

--- a/_includes/my-comments.html
+++ b/_includes/my-comments.html
@@ -27,7 +27,7 @@
   new Valine({
     av: AV,
     el: '#disqus_thread',
-    appID: appid,
+    appId: appid,
     appKey: appkey,
     verify: false,
     avatar: 'mm',
