add comments system

--- a/_includes/my-comments.html
+++ b/_includes/my-comments.html
@@ -31,7 +31,7 @@
     appKey: appkey,
     verify: false,
     avatar: 'mm',
-    placeholder: 'ヾﾉ≧∀≦)o来啊，快活啊!'
+    placeholder: 'Just go now!'
   })
 </script>
 {% endif %}
