--- a/_includes/my-comments.html
+++ b/_includes/my-comments.html
@@ -10,17 +10,9 @@
         this.page.title = d.title;
       };
       w.loadJSDeferred(d.getElementById("_hrefav").href + '/static/js/3.0.4/av-min.js');
+      w.loadJSDeferred(d.getElementById("_hrefvaline").href + 'valine/dist/Valine.min.js');
     }
   }(window, document);
-
-  (function(d, s) {
-    var j, e = d.getElementsByTagName('main')[0];
-    if (typeof LivereTower === 'function') { return; }
-    j = d.createElement(s);
-    j.src = 'https://unpkg.com/valine/dist/Valine.min.js';
-    j.async = true;
-    e.appendChild(j);
-  })(document, 'script');
 
   var appkey = '{{ site.valine.appkey }}',
     appid = '{{ site.valine.appid }}';
